--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0"
+    "nuxt": "^3.2.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -22,7 +22,7 @@
     "mitt": "^3.0.0",
     "nuxt-icons": "^3.0.0",
     "sass": "^1.56.1",
-    "vuetify": "^3.0.1",
+    "vuetify": "^3.1.6",
     "websocket": "^1.0.34"
   },
   "overrides": {
