--- a/.github/workflows/docker-image-dev.yml
+++ b/.github/workflows/docker-image-dev.yml
@@ -27,4 +27,4 @@ jobs:
         context: .
         file: Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_USER }}/animemanga-web:1.0.2_DEV, ${{ secrets.DOCKER_USER }}/animemanga-web:DEV_latest
+        tags: ${{ secrets.DOCKER_USER }}/animemanga-web:1.0.2_DEV, ${{ secrets.DOCKER_USER }}/animemanga-web:latest_DEV
