--- a/src/package.json
+++ b/src/package.json
@@ -9,19 +9,20 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.2.5",
-    "nuxt": "^3.2.2"
+    "nuxt": "^3.2.2",
+    "@sidebase/nuxt-auth": "^0.4.3"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
-    "@nuxtjs/axios": "^5.13.6",
     "@pinia/nuxt": "^0.4.6",
-    "pinia": "^2.0.28",
     "h3": "^1.0.1",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
+    "next-auth": "^4.20.1",
     "nuxt-icons": "^3.0.0",
+    "pinia": "^2.0.28",
     "sass": "^1.56.1",
     "vuetify": "^3.1.6",
     "websocket": "^1.0.34"
