--- a/src/package.json
+++ b/src/package.json
@@ -9,11 +9,12 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.2.5",
-    "nuxt": "^3.3.1",
-    "@sidebase/nuxt-auth": "^0.4.3"
+    "@sidebase/nuxt-auth": "^0.4.3",
+    "nuxt": "^3.3.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^3.0.2",
     "@pinia/nuxt": "^0.4.6",
