--- a/src/package.json
+++ b/src/package.json
@@ -8,9 +8,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.2.5",
-    "@sidebase/nuxt-auth": "^0.4.3",
-    "nuxt": "^3.3.1"
+    "@nuxt/devtools": "^0.3.1",
+    "@sidebase/nuxt-auth": "^0.4.4",
+    "nuxt-lodash": "^2.4.1",
+    "nuxt": "^3.3.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
