--- a/src/package.json
+++ b/src/package.json
@@ -10,8 +10,8 @@
   "devDependencies": {
     "@nuxt/devtools": "^0.3.1",
     "@sidebase/nuxt-auth": "^0.4.4",
-    "nuxt-lodash": "^2.4.1",
-    "nuxt": "^3.3.2"
+    "nuxt": "^3.3.2",
+    "nuxt-lodash": "^2.4.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -21,6 +21,7 @@
     "@pinia/nuxt": "^0.4.6",
     "h3": "^1.0.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
     "mitt": "^3.0.0",
     "next-auth": "^4.20.1",
     "nuxt-icons": "^3.0.0",
