--- a/DockerfileArm32v7
+++ b/DockerfileArm32v7
@@ -1,4 +1,4 @@
-FROM arm32v7/node:16.18
+FROM arm32v7/node:18.13
 
 WORKDIR /app
 
@@ -6,7 +6,7 @@ COPY ["src/", "./"]
 
 COPY . .
 
-RUN npm install --production
+RUN npm install --omit=dev
 RUN npm run build
 
 EXPOSE 3000
