--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "crypto-js": "^4.1.1",
     "h3": "^1.6.6",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
