--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "pinia": "^2.1.3",
     "sass": "^1.62.1",
     "vite-plugin-vuetify": "^1.0.2",
+    "vue-sonner": "^0.4.4",
     "vuetify": "^3.3.3",
     "websocket": "^1.0.34"
   },
