--- a/src/package.json
+++ b/src/package.json
@@ -8,12 +8,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.5.5",
-    "nuxt": "^3.5.3",
-    "nuxt-lodash": "^2.4.1"
+    "@nuxt/devtools": "^1.0.0-beta.0",
+    "nuxt": "^3.7.4",
+    "nuxt-lodash": "^2.5.0"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
     "h3": "^1.6.6",
     "lodash": "^4.17.21",
@@ -24,7 +25,7 @@
     "sass": "^1.62.1",
     "vite-plugin-vuetify": "^1.0.2",
     "vue-sonner": "^0.4.4",
-    "vuetify": "^3.3.3",
+    "vuetify": "^3.3.19",
     "websocket": "^1.0.34"
   },
   "overrides": {
