--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "axios": "^1.5.1",
     "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
     "h3": "^1.6.6",
